--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 GlobalDefaultGameMode="/Script/GAS.GASGameMode"
+GameInstanceClass=/Script/GAS.AG_GameInstance
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
